Multidim Arrays, for-each-in loop, optional semicolons, absolute one-line statements, escaped chars